--- a/styles/style.css
+++ b/styles/style.css
@@ -38,11 +38,11 @@ header h1 {
     color: #ffffff;
     font-size: 3em;
     margin-top: 3%;
-    margin-bottom: 2.4%;
+    margin-bottom: 2%;
 
   }
 
-  @media (max-width: 1280px) {
+  @media (max-width: 1280) {
       header h1 {
         font-size: 2.5em;
         margin-top: 1%;
@@ -67,7 +67,7 @@ header nav {
     display: inline;
 }
 
-header li {
+.headerLi {
     display: inline-block;
     font-size: 1em;
     font-family: comfortaaBold;
@@ -79,6 +79,7 @@ header li {
     border-radius: 5%;
     box-shadow: 1px 1px 2px #5f5e5e8a;
 }
+
 
 header li:nth-child(3) {
     margin-right: 0;
@@ -114,7 +115,7 @@ header ul {
     margin-top: 2%;
     background-color: white;
     box-shadow:  0 0 3em #5f5e5e65;
-    padding:40%;
+    padding:2.5%;
     border-radius:0.5%;
 }
   
